--- a/src/main/resources/templates/SendedMail.html
+++ b/src/main/resources/templates/SendedMail.html
@@ -64,7 +64,7 @@
         }
 
         .event-details strong {
-            color: #ffd700; /* Adjusted color for emphasis */
+            color: #ffd700
         }
     </style>
 </head>
